--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,52 @@
+aiohttp==3.8.3
+aiosignal==1.2.0
+asgiref==3.5.2
+async-timeout==4.0.2
+attrs==22.1.0
+cachelib==0.9.0
+cachetools==5.2.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+cloud-sql-python-connector==0.9.3
+configparser==5.3.0
+cryptography==38.0.3
+Django==4.1.3
 Flask==2.2.2
+frozenlist==1.3.1
+google-api-core==2.10.2
+google-auth==2.14.0
+google-cloud-secret-manager==2.12.6
+googleapis-common-protos==1.56.4
+grpc-google-iam-v1==0.12.4
+grpcio==1.50.0
+grpcio-status==1.50.0
 gunicorn==20.1.0
+idna==3.4
+image==1.5.33
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+multidict==6.0.2
+numpy==1.23.4
+ordered-set==4.1.0
+pandas==1.5.1
+Pillow==9.3.0
+proto-plus==1.22.1
+protobuf==4.21.9
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyMySQL==1.0.2
+pyotp==2.7.0
+python-dateutil==2.8.2
+pytz==2022.6
+qrcode==7.3.1
+requests==2.28.1
+rsa==4.9
+six==1.16.0
+sqlparse==0.4.3
+urllib3==1.26.12
+Werkzeug==2.2.2
+yarl==1.8.1
