--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,10 @@ Flask==2.2.2
 frozenlist==1.3.1
 google-api-core==2.10.2
 google-auth==2.14.0
+google-cloud-appengine-logging==1.1.6
+google-cloud-audit-log==0.2.4
+google-cloud-core==2.3.2
+google-cloud-logging==3.2.5
 google-cloud-secret-manager==2.12.6
 googleapis-common-protos==1.56.4
 grpc-google-iam-v1==0.12.4
